--- a/Strings/en-US/Resources.resw
+++ b/Strings/en-US/Resources.resw
@@ -646,7 +646,7 @@
     <value>Wallpaper Abyss</value>
   </data>
   <data name="Slogan_abyss" xml:space="preserve">
-    <value>Home to 935361 wallpapers</value>
+    <value>Home to 952833 wallpapers</value>
   </data>
   <data name="TextContributeUrl.Text" xml:space="preserve">
     <value>Url</value>
@@ -754,7 +754,7 @@
     <value>Donate</value>
   </data>
   <data name="SettingsReviewDesc.Text" xml:space="preserve">
-    <value>羡青山有思，白鹤忘机</value>
+    <value>与谁同坐，明月清风我</value>
   </data>
   <data name="SettingsReviewTitle.Text" xml:space="preserve">
     <value>Rate it</value>
