--- a/Strings/zh-CN/Resources.resw
+++ b/Strings/zh-CN/Resources.resw
@@ -646,7 +646,7 @@
     <value>Wallpaper Abyss</value>
   </data>
   <data name="Slogan_abyss" xml:space="preserve">
-    <value>935361张壁纸的聚集地</value>
+    <value>952833张壁纸的聚集地</value>
   </data>
   <data name="TextContributeUrl.Text" xml:space="preserve">
     <value>链接</value>
@@ -754,7 +754,7 @@
     <value>赞助支持</value>
   </data>
   <data name="SettingsReviewDesc.Text" xml:space="preserve">
-    <value>羡青山有思，白鹤忘机</value>
+    <value>与谁同坐，明月清风我</value>
   </data>
   <data name="SettingsReviewTitle.Text" xml:space="preserve">
     <value>支持</value>
