--- a/Strings/zh-CN/Resources.resw
+++ b/Strings/zh-CN/Resources.resw
@@ -174,12 +174,6 @@
   <data name="MenuSetLock.Label" xml:space="preserve">
     <value>用作锁屏背景</value>
   </data>
-  <data name="MenuVolumnOff.ToolTipService.ToolTip" xml:space="preserve">
-    <value>关闭声音</value>
-  </data>
-  <data name="MenuVolumnOn.ToolTipService.ToolTip" xml:space="preserve">
-    <value>打开声音</value>
-  </data>
   <data name="MenuFillOff.ToolTipService.ToolTip" xml:space="preserve">
     <value>切换显示模式：全图</value>
   </data>
@@ -197,9 +191,6 @@
   </data>
   <data name="YmyouliCate_artistry" xml:space="preserve">
     <value>意境</value>
-  </data>
-  <data name="DetailSize" xml:space="preserve">
-    <value>{0} / {1}x{2}, {3}</value>
   </data>
   <data name="MsgLostProvider" xml:space="preserve">
     <value>无数据或无法连接图源：{0}</value>
@@ -770,5 +761,20 @@
   </data>
   <data name="YmyouliOrder_random" xml:space="preserve">
     <value>随机</value>
+  </data>
+  <data name="Provider_edge" xml:space="preserve">
+    <value>Edge</value>
+  </data>
+  <data name="Slogan_edge" xml:space="preserve">
+    <value>每日一图/视频</value>
+  </data>
+  <data name="MsgIdCopied" xml:space="preserve">
+    <value>已复制图片元素</value>
+  </data>
+  <data name="TimelineOrder_score" xml:space="preserve">
+    <value>热度</value>
+  </data>
+  <data name="YmyouliOrder_score" xml:space="preserve">
+    <value>热度</value>
   </data>
 </root>
